--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ markdown: kramdown
 ### content configuration ###
 title:       "Digital Humanities Beyond Modern English: Computational Analysis of Premodern and Non-Western Literature"
 keywords:    "digital humanities, world literature"
-description: "Landing page for DH Beyond Modern English conference at Dartmouth College, Apr. 23-25, 2019"
+description: "Landing page for DH Beyond Modern English conference at the University of Texas at Austin, April 6-8, 2022"
 source_link: ""
 favicon:     "img/favicon.ico"
 touch_icon:  "img/apple-touch-icon.png"
